syntax = "proto3";

option go_package = "pb/gen/simmgr";

package ukama.sim_manager.v1;


service SimPool {
    rpc PopIccid(PopIccidRequest) returns (PopIccidResponse);
}

message PopIccidRequest{
}

message PopIccidResponse{
    string iccid = 1;
}